# waydroid-kcm

./: .gitignore  CMakeLists.txt  kcm_waydroid.cpp  kcm_waydroid.h  kcm_waydroid.json
package/contents/ui/: main.qml
